--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@fortawesome/pro-thin-svg-icons": "^6.2.1",
 		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@fortawesome/sharp-solid-svg-icons": "^6.2.1",
+		"@netlify/plugin-nextjs": "^4.39.1",
 		"@uiw/react-markdown-preview": "^4.1.7",
 		"@vercel/analytics": "^0.1.6",
 		"babel-plugin-macros": "^3.1.0",
@@ -31,6 +32,7 @@
 		"react-intersection-observer": "^9.4.1",
 		"react-markdown": "^8.0.4",
 		"react-type-animation": "^2.1.2",
+		"sharp": "^0.32.4",
 		"swr": "^2.0.0",
 		"the-new-css-reset": "^1.8.2",
 		"uuid": "^9.0.0"
